# blackvuesync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  blackvuesync.py  blackvuesync.sh  coverage.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  run.sh  sonar-project.properties  supertool
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  docker-build.yml  sonarcloud.yml
blackvuesync/: __init__.py  __main__.py  metrics.py  settings.py  sync.py
blackvuesync/server/: __init__.py  auth.py  forecast.py  gps.py  gsensor.py  log_buffer.py  progress.py  scheduler.py  settings_form.py  sse.py  stats_store.py  sync_runner.py  viewer_index.py
blackvuesync/server/routes/: __init__.py  _helpers.py  api_auth.py  api_dashcam.py  api_health.py  api_logs.py  api_recordings.py  api_schedule.py  api_settings.py  api_stats.py  api_sync.py  api_viewer.py  auth.py  health.py  hx_dashboard.py  hx_sync.py  media.py  ui.py
blackvuesync/server/static/css/: components.css  dashboard.css  layout.css  logs.css  settings.css  stats.css  tokens.css  viewer.css
blackvuesync/server/static/js/: VENDORED.md  app.js  dashboard.js  logs.js  settings.js  stats.js  viewer.js
blackvuesync/server/templates/: base.html  dashboard.html  first_run.html  login.html  logs.html  settings.html  stats.html  viewer.html
blackvuesync/server/templates/_partials/: auth_controls.html  dashcam_card.html  dashcam_info_card.html  last_run_card.html  next_scheduled_card.html  password_dialog.html  recent_activity_card.html  settings_field.html  stop_confirm_modal.html  storage_card.html  sync_status_card.html
blackvuesync/server/templates/_placeholders/: dashboard.html  logs.html  settings.html  stats.html  viewer.html
docs/: api.md
docs/plans/: 2026-05-18-web-foundation-design.md  2026-05-18-web-foundation-phase-a.md  2026-05-18-web-foundation-phase-b.md  2026-05-18-web-foundation-phase-c.md  2026-05-18-web-foundation-phase-d.md  2026-05-18-web-foundation-phase-e.md  2026-05-18-web-foundation-phase-f.md  2026-05-18-web-foundation-phase-g.md  2026-05-19-sub-project-2-dashboard-design.md  2026-05-19-sub-project-2-phase-a.md  2026-05-19-sub-project-2-phase-b.md  2026-06-01-download-resume-design.md  2026-06-01-download-resume-plan.md  2026-06-01-sub-project-2-phase-2c-design.md  2026-06-02-sub-project-2-phase-2c-plan.md  2026-06-03-sub-project-3-settings-ui-design.md  2026-06-03-sub-project-3-settings-ui-plan.md  2026-06-05-sub-project-4-log-viewer-design.md  2026-06-05-sub-project-4-log-viewer-plan.md  2026-06-07-sub-project-5-statistics-design.md  2026-06-07-sub-project-5-statistics-plan.md  2026-06-08-sub-project-6-viewer-design.md  2026-06-08-sub-project-6-viewer-plan.md
docs/reference/: blackvue-file-formats.md
features/: sync_resume.feature
features/lib/: docker.py
features/steps/: blackvuesync_steps.py  dashcam_recordings_steps.py  downloaded_recordings_steps.py  filter_steps.py
test/: blackvuesync_test.py  conftest.py  test_auth.py  test_clean_destination.py  test_dashboard_render.py  test_dashboard_sse_handoff.py  test_forecast.py  test_gps.py  test_gsensor.py  test_log_buffer.py  test_logging_on_change.py  test_main_serve_logging.py  test_progress.py  test_routes_api_auth.py  test_routes_api_dashcam.py  test_routes_api_health.py  test_routes_api_logs.py  test_routes_api_recordings.py  test_routes_api_schedule.py  test_routes_api_settings.py  test_routes_api_stats.py  test_routes_api_sync.py  test_routes_api_viewer.py  test_routes_auth.py  test_routes_health.py  test_routes_hx_dashboard.py  test_routes_hx_sync.py  test_routes_media.py  test_routes_ui.py  test_scheduler.py  test_scheduler_pause.py  test_security_headers.py  test_settings.py  test_settings_form.py  test_settings_page.py  test_stats_store.py  test_sync_callback.py  test_sync_resume.py  test_sync_runner.py  test_sync_stop_flag.py  (+1 more)
test/e2e/: conftest.py  test_dashboard_active_mode.py  test_logs_live.py  test_settings_active.py  test_stats_page.py  test_viewer_page.py
