[project]
name = "blackvuesync"
version = "2.4.0a3"
description = "Synchronize recordings from BlackVue dashcams to a local directory"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["blackvue", "dashcam", "sync", "backup"]
authors = [
    {name = "Alessandro Colomba", email = "acolomba@colomba.org"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "Flask~=3.1",
    "Flask-WTF~=1.2",
    "waitress~=3.0",
    "argon2-cffi~=23.1",
    "APScheduler~=3.10",
]

[project.scripts]
blackvuesync = "blackvuesync.__main__:main"

[project.optional-dependencies]
# development dependencies
dev = [
    "behave~=1.2",
    "black~=25.11",
    "freezegun~=1.5",
    "mypy~=1.14",
    "pre-commit~=4.3",
    "PyHamcrest~=2.1",
    "pylint~=3.3",
    "pytest~=8.3",
    "pytest-cov~=7.0",
    "pytest-flask~=1.3",
    "pytest-playwright~=0.6",
    "python-lsp-server~=1.14",
    "requests~=2.32",
    "ruff~=0.9",
    "testcontainers~=4.13",
    "tzlocal~=5.2",
]

[project.urls]
Homepage = "https://github.com/tekgnosis-net/blackvuesync"
Repository = "https://github.com/tekgnosis-net/blackvuesync"
Issues = "https://github.com/tekgnosis-net/blackvuesync/issues"

[build-system]
requires = ["setuptools>=58.0.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blackvuesync", "blackvuesync.server", "blackvuesync.server.routes"]

[tool.setuptools.package-data]
"blackvuesync.server" = [
    "templates/**/*.html",
    "static/**/*",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "I",   # isort
    "N",   # pep8-naming
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black/ruff-format)
    "UP007", # use X | Y for type annotations (not compatible with Python 3.9)
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["venv/", "build/", "dist/"]

# ignores third-party packages without type stubs
[[tool.mypy.overrides]]
module = ["requests", "hamcrest", "testcontainers.*", "tzlocal", "flask_wtf.*", "waitress", "freezegun"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "blackvuesync_test"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "conftest"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "test_settings"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "_pytest.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "features.steps.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "features.mock_dashcam.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "features.mock_dashcam.server"
warn_return_any = false

[[tool.mypy.overrides]]
module = ["test_auth", "test_routes_auth", "test_routes_health", "test_routes_ui", "test_security_headers", "test_sync_callback", "test_sync_runner", "test_routes_api_sync", "test_routes_hx_sync", "test_scheduler", "test_routes_api_settings", "test_routes_api_auth", "test_main_serve_logging", "test_routes_api_health", "test_routes_api_recordings", "test_routes_api_schedule", "test_routes_hx_dashboard", "test_sync_stop_flag", "test_scheduler_pause", "test_routes_api_dashcam", "test_dashboard_render", "test_sync_resume", "test_clean_destination", "test_logging_on_change", "test_dashboard_sse_handoff"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["blackvuesync.server.routes.*", "blackvuesync.server.routes.auth", "blackvuesync.server.routes.health", "blackvuesync.server.routes.ui"]
disallow_untyped_decorators = false

[tool.coverage.run]
# uses parallel mode to create separate coverage files that can be combined
parallel = true
source = ["."]
# excludes test and mock code from coverage collection
omit = [
    "test/*",
    "features/*",
]

[tool.coverage.report]
# excludes test and mock code from coverage reports
omit = [
    "test/*",
    "features/*",
]

[tool.coverage.html]
directory = "coverage_report"

[tool.pylint.messages_control]
disable = [
    "line-too-long",  # handled by black/ruff
    "too-many-lines",  # C0302
]

[tool.pylint.design]
max-module-lines = 1500

[tool.pylint.format]
max-line-length = 88  # for consistency with black/ruff
